test/invalid-semantics/tcomp000_while-plus-five/while-plus-five.mag
-- tcomp000, Vasco T. Vasconcelos

fun main (_) : Unit -> Unit = (while false do 5) + 5
